airline/cmd_django.txt
Windows PowerShell
Copyright (C) Microsoft Corporation. All rights reserved.

Try the new cross-platform PowerShell https://aka.ms/pscore6

PS C:\Users\vuduc\Desktop\CODE\Django\airline> python manage.py startapp flights
PS C:\Users\vuduc\Desktop\CODE\Django\airline> dir

    Directory: C:\Users\vuduc\Desktop\CODE\Django\airline

Mode                 LastWriteTime         Length Name                                                                                                                 
----                 -------------         ------ ----
d-----          4/7/2021   9:29 pm                airline
d-----          4/7/2021   9:30 pm                flights
-a----          4/7/2021   9:28 pm            685 manage.py


PS C:\Users\vuduc\Desktop\CODE\Django\airline> python manage.py makemigrations
Migrations for 'flights':
  flights\migrations\0001_initial.py
    - Create model Flight
PS C:\Users\vuduc\Desktop\CODE\Django\airline> python manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, flights, sessions
Running migrations:
  Applying contenttypes.0001_initial... OK
  Applying auth.0001_initial... OK
  Applying admin.0001_initial... OK
  Applying admin.0002_logentry_remove_auto_add... OK
  Applying admin.0003_logentry_add_action_flag_choices... OK
  Applying contenttypes.0002_remove_content_type_name... OK
  Applying auth.0002_alter_permission_name_max_length... OK
  Applying auth.0004_alter_user_username_opts... OK
  Applying auth.0005_alter_user_last_login_null... OK
  Applying auth.0006_require_contenttypes_0002... OK
  Applying auth.0007_alter_validators_add_error_messages... OK
  Applying auth.0008_alter_user_username_max_length... OK
  Applying auth.0009_alter_user_last_name_max_length... OK
  Applying auth.0010_alter_group_name_max_length... OK
  Applying auth.0011_update_proxy_permissions... OK
  Applying auth.0012_alter_user_first_name_max_length... OK
  Applying flights.0001_initial... OK
  Applying sessions.0001_initial... OK
PS C:\Users\vuduc\Desktop\CODE\Django\airline> dir

    Directory: C:\Users\vuduc\Desktop\CODE\Django\airline


Mode                 LastWriteTime         Length Name
----                 -------------         ------ ----
d-----          4/7/2021   9:29 pm                airline
d-----          4/7/2021   9:33 pm                flights
-a----          4/7/2021   9:33 pm         135168 db.sqlite3
-a----          4/7/2021   9:28 pm            685 manage.py


PS C:\Users\vuduc\Desktop\CODE\Django\airline> python manage.py shell
Python 3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from flights.models import *
>>> f = Flight(origin = "New York", destination = "Hanoi", duration = 1945)
>>> f.save()
>>> Flight.onjects.all()
Traceback (most recent call last):
AttributeError: type object 'Flight' has no attribute 'onjects'
>>> Flight.objects.all()
<QuerySet [<Flight: Flight object (1)>]>
>>> from flights.models import Flight
>>> f
<Flight: Flight object (1)>
>>> f.first()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Flight' object has no attribute 'first'
>>> exit()
PS C:\Users\vuduc\Desktop\CODE\Django\airline> python manage.py shell
Python 3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from flights.models. import Flight
  File "<console>", line 1
    from flights.models. import Flight
                         ^
SyntaxError: invalid syntax
>>> flights = Flight.objects.all()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'Flight' is not defined
>>> from flights.models import Flight
>>> flights = Flight.objects.all()
>>> flights
<QuerySet [<Flight: 1: from New York to Hanoi in 1945 minutes>]>
>>> flight = flights.first()
>>> flight
<Flight: 1: from New York to Hanoi in 1945 minutes>
>>> flight.origin
'New York'
>>> flight.id
1
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'flihgt' is not defined
>>> flight.delete()
(1, {'flights.Flight': 1})
  File "<console>", line 1
    ♦
    ^
SyntaxError: invalid syntax
PS C:\Users\vuduc\Desktop\CODE\Django\airline> python manage.py makemigrations
Migrations for 'flights':
  flights\migrations\0002_auto_20210704_2144.py
    - Create model Airport
    - Alter field destination on flight
    - Alter field origin on flight
PS C:\Users\vuduc\Desktop\CODE\Django\airline> python manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, flights, sessions
Running migrations:
  Applying flights.0002_auto_20210704_2144... OK
PS C:\Users\vuduc\Desktop\CODE\Django\airline> python manage.py shell
Python 3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from flights.models import *
>>> jfk = Airport(code = "JFK", city = "New York")
>>> jfk.save()
>>> lhr = Airport(code = "LHR", city = "London)
  File "<console>", line 1
    lhr = Airport(code = "LHR", city = "London)
                                              ^
SyntaxError: EOL while scanning string literal
>>> lhr = Airport(code="LHR", city = "London")
>>> lhr.save()
>>> cdg = Airport("code="CDG", city = "Paris")
  File "<console>", line 1
    cdg = Airport("code="CDG", city = "Paris")
                         ^
SyntaxError: invalid syntax
>>> cdg = Airport(code = "CDG", city="Paris")
>>> cdg.save()
>>> nrt = Airport(code = "NRT", city = "Tokyo")
>>> nrt.save()
>>> f = Flight(origin = jfk, destination = lhr,duration = 415)
>>> f.save()
>>> f
<Flight: 1: from New York (JFK) to London (LHR) in 415 minutes>
>>> f. origin
<Airport: New York (JFK)>
>>>